Bug 1883813 - Implement table cell height quirk as per spec. r=dshin

That is, don't force the width to be content-box. That matches other
implementations and the spec.

Differential Revision: https://phabricator.services.mozilla.com/D204812